2009-04-02  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am:
	* src/bacon-message-connection.c:
	* src/bacon-message-connection.h:
	* src/plugins/lirc/totem-lirc.c (totem_lirc_to_command):
	* src/totem-object.c (totem_remote_command_get_type),
	(totem_action_exit), (totem_action_remote):
	* src/totem-options.c (totem_options_process_for_server):
	* src/totem-options.h:
	* src/totem-private.h:
	* src/totem.c (totem_message_received_cb), (main):
	* src/totem.h: Remove use of bacon-message-connection and
	use libunique instead (Closes: #162822)

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-options.c (totem_options_process_for_server):
	* src/totem-options.h: Remove --print-playing, we
	have a D-Bus plugin to export that data now (Closes: #512232)

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_file_changed):
	Only remove files when the location is about to be umounted,
	or is umounted (Closes: #574097)

2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* src/plugins/dbus-service/Makefile.am:
	* src/plugins/dbus-service/dbus-service.py:
	* src/plugins/dbus-service/dbus-service.totem-plugin.in: Added a
	D-Bus Service plugin by Lucky <lucky1.data@gmail.com>.
	(Closes: #576016)

2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/totem-youtube.c (new_from_stream_thread),
	(totem_gdk_pixbuf_new_from_stream_at_scale_async),
	(totem_gdk_pixbuf_new_from_stream_async),
	(totem_gdk_pixbuf_new_from_stream_finish), (thumbnail_loaded_cb),
	(thumbnail_opened_cb): Temporarily copy functions from bug #575900
	into the YouTube plugin in lieu of them being committed.

2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_can_play_youtube_videos):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_can_play_youtube_videos):
	* src/backend/bacon-video-widget.h: