@@ -1,5 +1,11 @@
 2009-04-02  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-playlist.c (totem_playlist_init):
+	Patch from Zachary Strudler <strudz@rpi.edu> to add
+	tooltips to the playlist items (Closes: #352553)
+
+2009-04-02  Bastien Nocera  <hadess@hadess.net>
+
 	* configure.in:
 	* src/Makefile.am:
 	* src/bacon-message-connection.c:
